# ImageProcessor

./: .gitignore  CMakeLists.txt  readme.md
include/: Image.h  cudaProcessor.cuh
src/: Image.cpp  cudaProcessor.cu  main.cpp
